use fluent docker

--- a/test/GitLabApiClient.Test/GitLabApiClient.Test.csproj
+++ b/test/GitLabApiClient.Test/GitLabApiClient.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <IsPackable>false</IsPackable>
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="1.1.0" />
+    <PackageReference Include="Ductus.FluentDocker" Version="2.7.46-beta0080" />
     <PackageReference Include="FakeItEasy" Version="5.4.0" />
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
