--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ skip_branch_with_pr: true
 install:
   - ps: Switch-DockerLinux
   - ps: dotnet tool install -g Codecov.Tool
-  - ps: dotnet tool install -g GitVersion.Tool --version 5.1.3
+  - ps: dotnet tool install -g GitVersion.Tool
 
 before_build:
   - ps: dotnet gitversion /l console /output buildserver
