--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.201'
+          dotnet-version: '3.1'
 
       - run: dotnet tool install -g Codecov.Tool
 
@@ -29,3 +29,15 @@ jobs:
 
       - run: ./test.ps1
         shell: pwsh
+
+      - name: Push NuGet
+        if: |
+          github.event_name == 'push' && (
+            startsWith(github.event.ref, 'refs/tags/')
+            || endsWith(github.event.ref, '/master')
+          )
+        shell: pwsh
+        run: dotnet nuget push **/*.nupkg --source $Env:SOURCE --api-key $Env:TOKEN
+        env:
+          SOURCE: 'https://api.nuget.org/v3/index.json'
+          TOKEN: ${{ secrets.NUGET_API_KEY }}
